@@ -32,6 +32,10 @@ Hardcode:
  * Renamed some variables in COMMAND() definitions for consistency/clarity.
    See HACKING.184 for more info. [MG]
  * Assorted Windows fixes. [SW]
+
+Locks:
+ * objid locks are now turned into =-locks by the lock parser. The clearing
+   of references to deleted objects makes objid locks extraneous. [SW]
  
 Commands:
  * 'teach' now takes a /list switch, which lets it run an action list
@@ -73,6 +77,9 @@ Fixes:
  * rand(-X, -Y) where -X > -Y was broken. [SW]
  * Fix a couple of minor memory leaks. [SW]
  * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]
+ * Fix crash when reading a database with an invalid lock key. Reported by
+   Covenant. [SW]
+ * Some fixes to the test suite by Sketch.
 
 & 1.8.4p3
 Version 1.8.4 patchlevel 3                                 Mar 18,  2011
