@@ -84,6 +84,7 @@ Fixes:
  * Possible crashbug in switch(), @switch, iter() and @dolist fixed. [MG]
  * Fix crash when reading a database with an invalid lock key. Reported by
    Covenant. [SW]
+ * Some fixes to the test suite by Sketch.
 
 Version 1.8.4 patchlevel 3                                 Mar 18,  2011
 
